--- a/Home1.html
+++ b/Home1.html
@@ -172,7 +172,7 @@
 					<td>
 					         <table border="0" cellpadding="5" cellspacing="0">
 						<tr>
-						        <td><a name=item1"><h2><font face="Arial">Item 1</font></2></a></td>
+						        <td><a name="item1"><h2><font face="Arial">Item 1</font></2></a></td>
 						</tr>
 						        <tr>
 						              <td align="justify"><font face="Arial" size="2">
@@ -207,7 +207,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 					<td>
 					         <table border="0" cellpadding="5" cellspacing="0">
 						<tr>
-						        <td><a name=item2"><h2><font face="Arial">Item 2</font></2></a></td>
+						        <td><a name="item2"><h2><font face="Arial">Item 2</font></2></a></td>
 						</tr>
 						        <tr>
 						              <td align="justify"><font face="Arial" size="2" >
@@ -241,7 +241,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 					<td>
 					         <table border="0" cellpadding="5" cellspacing="0">
 						<tr>
-						        <td><a name=item3"><h2><font face="Arial">Item 3</font></2></a></td>
+						        <td><a name="item3"><h2><font face="Arial">Item 3</font></2></a></td>
 						</tr>
 						        <tr>
 						              <td align="justify"><font face="Arial" size="2">
@@ -275,7 +275,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 					<td>
 					         <table border="0" cellpadding="5" cellspacing="0">
 						<tr>
-						        <td><a name=item4"><h2><font face="Arial">Item 4</font></2></a></td>
+						        <td><a name="item4"><h2><font face="Arial">Item 4</font></2></a></td>
 						</tr>
 						        <tr>
 						              <td align="justify"><font face="Arial" size="2">
